# IndiaTaxBench-OpenEnv

./: .gitignore  Blog.md  Dockerfile  LICENSE  README.md  __init__.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  validate-submission.sh
india_tax_capture/: .gitignore  README.md  capture_india_tax_dataset.py  pyproject.toml
india_tax_capture/data/: india_tax_rows.jsonl
india_tax_capture/scenarios/: business_only.json  manifest.json  salary_business_mixed_fy2425.json  salary_capital_gains.json  salary_metro_80c.json  salary_non_metro_hra.json  senior_80c_80tta_deductions_fy2425.json  senior_salary_deductions.json  stcgt_ltcg_weighted_fy2425.json
notebooks/: train_qwen_india_tax.ipynb
scripts/: __init__.py  notebook_env_helpers.py  print_grader_calibration.py
server/: __init__.py  advisor_rubric.py  app.py  india_tax_bench_environment.py  tasks.py
tests/: test_advisor_http.py  test_advisor_rubric.py  test_environment.py  test_grading.py  test_models.py  test_notebook_env_helpers.py
