# Copyright (c) Meta Platforms, Inc. and affiliates. (OpenEnv pattern)
# SPDX-License-Identifier: BSD-3-Clause

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-india-tax-bench"
version = "0.1.0"
description = "India income tax (FY 2024–25 old regime) benchmark environment for OpenEnv"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openenv-core[core]>=0.2.2",
    "requests>=2.25.0",
    "openai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]
notebook = [
    "transformers>=4.44.0",
    "torch>=2.2.0",
    "peft>=0.12.0",
    "accelerate>=0.33.0",
    "bitsandbytes>=0.43.0",
    "trl>=0.9.0",
    "matplotlib>=3.8.0",
    "datasets>=2.19.0",
]

[project.scripts]
server = "india_tax_bench.server.app:main"

[tool.setuptools]
include-package-data = true
packages = ["india_tax_bench", "india_tax_bench.server"]
package-dir = { "india_tax_bench" = ".", "india_tax_bench.server" = "server" }
